pacpci2_py.h

typedef void *HANDLE;
typedef unsigned char byte;
DLL_API short openPCI2(void);
DLL_API void  closePCI2(void);
DLL_API unsigned char  checkChannelHardwarePresent(short chanID);
DLL_API unsigned char  checkChannelParametricPresent(short ParametricId);
 

DLL_API short setTimeDrivenRate(unsigned short tdRateMs);
DLL_API short setRMS_ASL_TimeConstant(unsigned short tcMs);
DLL_API short setChannelGain(unsigned short chanId, unsigned short gain_db);
 
DLL_API short setPreAmpGain(short channel, short dB);
 
DLL_API short setChannel(unsigned short chanId, unsigned short on_off);
DLL_API short setChannelThresholdType(unsigned short chanId, unsigned short type);
DLL_API short setChannelThreshold(unsigned short chanId, unsigned short thresh);
DLL_API short setChannelFloatingThresholdDeadband(short chanId, short dB);
DLL_API short setChannelHLT(unsigned short chanId, unsigned short hlt);
DLL_API short setChannelHDT(unsigned short chanId, unsigned short hdt);
DLL_API short setChannelPDT(unsigned short chanId, unsigned short pdt);
DLL_API short setChannelMaxDuration(unsigned short chanId, unsigned short duration_ms);
 
DLL_API short setAnalogFilter(unsigned short chanId, unsigned short lp, unsigned short hp);
DLL_API short setSampleRate(unsigned short chanId, unsigned short rate_kHz);
DLL_API short setWaveformLength(unsigned short chanId, unsigned short lengthK);
DLL_API short setWaveformPreTrigger(unsigned short chanId, short samples);
DLL_API short setWaveformTransfer(unsigned short on_off);
DLL_API short stopWaveformTransfer(void);
DLL_API short startWaveformTransfer(void);
DLL_API short setHitFeature(unsigned short featureId, unsigned short on_off);
DLL_API short setHitParametric(unsigned short parametricId, unsigned short on_off);
DLL_API short setTimeDrivenFeature(unsigned short featureId, unsigned short on_off);
DLL_API short setTimeDrivenParametric(unsigned short parametricId, unsigned short on_off);
DLL_API short setHitFftFrequencySpan(int totalStart, int totalEnd, int numberSegments, int *startSegment, int *endSegment);
 
DLL_API short setParametricGain(unsigned short parametricId, unsigned short gain);