PacPci2.py


        unix_lib_dirs_list = []
        if bitage.startswith("64"):
            # prefer 64 bit if that is our arch
            unix_lib_dirs_list += ["/lib64", "/usr/lib64"]

        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs([])

# Begin libraries
_libs["PacPci2"] = load_library("PacPci2")

# 1 libraries
# End libraries

# No modules

HANDLE = POINTER(None)# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 16

byte = c_ubyte# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 17

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 19
if _libs["PacPci2"].has("openPCI2", "cdecl"):
    openPCI2 = _libs["PacPci2"].get("openPCI2", "cdecl")
    openPCI2.argtypes = []
    openPCI2.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 20
if _libs["PacPci2"].has("closePCI2", "cdecl"):
    closePCI2 = _libs["PacPci2"].get("closePCI2", "cdecl")
    closePCI2.argtypes = []
    closePCI2.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 22
if _libs["PacPci2"].has("checkChannelHardwarePresent", "cdecl"):
    checkChannelHardwarePresent = _libs["PacPci2"].get("checkChannelHardwarePresent", "cdecl")
    checkChannelHardwarePresent.argtypes = [c_short]
    checkChannelHardwarePresent.restype = c_ubyte

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 23
if _libs["PacPci2"].has("checkChannelParametricPresent", "cdecl"):
    checkChannelParametricPresent = _libs["PacPci2"].get("checkChannelParametricPresent", "cdecl")
    checkChannelParametricPresent.argtypes = [c_short]
    checkChannelParametricPresent.restype = c_ubyte

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 25
if _libs["PacPci2"].has("setTimeDrivenRate", "cdecl"):
    setTimeDrivenRate = _libs["PacPci2"].get("setTimeDrivenRate", "cdecl")
    setTimeDrivenRate.argtypes = [c_ushort]
    setTimeDrivenRate.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 26
if _libs["PacPci2"].has("setRMS_ASL_TimeConstant", "cdecl"):
    setRMS_ASL_TimeConstant = _libs["PacPci2"].get("setRMS_ASL_TimeConstant", "cdecl")
    setRMS_ASL_TimeConstant.argtypes = [c_ushort]
    setRMS_ASL_TimeConstant.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 27
if _libs["PacPci2"].has("setChannelGain", "cdecl"):
    setChannelGain = _libs["PacPci2"].get("setChannelGain", "cdecl")
    setChannelGain.argtypes = [c_ushort, c_ushort]
    setChannelGain.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 28
if _libs["PacPci2"].has("setPreAmpGain", "cdecl"):
    setPreAmpGain = _libs["PacPci2"].get("setPreAmpGain", "cdecl")
    setPreAmpGain.argtypes = [c_short, c_short]
    setPreAmpGain.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 29
if _libs["PacPci2"].has("setChannel", "cdecl"):
    setChannel = _libs["PacPci2"].get("setChannel", "cdecl")
    setChannel.argtypes = [c_ushort, c_ushort]
    setChannel.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 30
if _libs["PacPci2"].has("setChannelThresholdType", "cdecl"):
    setChannelThresholdType = _libs["PacPci2"].get("setChannelThresholdType", "cdecl")
    setChannelThresholdType.argtypes = [c_ushort, c_ushort]
    setChannelThresholdType.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 31
if _libs["PacPci2"].has("setChannelThreshold", "cdecl"):
    setChannelThreshold = _libs["PacPci2"].get("setChannelThreshold", "cdecl")
    setChannelThreshold.argtypes = [c_ushort, c_ushort]
    setChannelThreshold.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 32
if _libs["PacPci2"].has("setChannelFloatingThresholdDeadband", "cdecl"):
    setChannelFloatingThresholdDeadband = _libs["PacPci2"].get("setChannelFloatingThresholdDeadband", "cdecl")
    setChannelFloatingThresholdDeadband.argtypes = [c_short, c_short]
    setChannelFloatingThresholdDeadband.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 33
if _libs["PacPci2"].has("setChannelHLT", "cdecl"):
    setChannelHLT = _libs["PacPci2"].get("setChannelHLT", "cdecl")
    setChannelHLT.argtypes = [c_ushort, c_ushort]
    setChannelHLT.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 34
if _libs["PacPci2"].has("setChannelHDT", "cdecl"):
    setChannelHDT = _libs["PacPci2"].get("setChannelHDT", "cdecl")
    setChannelHDT.argtypes = [c_ushort, c_ushort]
    setChannelHDT.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 35
if _libs["PacPci2"].has("setChannelPDT", "cdecl"):
    setChannelPDT = _libs["PacPci2"].get("setChannelPDT", "cdecl")
    setChannelPDT.argtypes = [c_ushort, c_ushort]
    setChannelPDT.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 36
if _libs["PacPci2"].has("setChannelMaxDuration", "cdecl"):
    setChannelMaxDuration = _libs["PacPci2"].get("setChannelMaxDuration", "cdecl")
    setChannelMaxDuration.argtypes = [c_ushort, c_ushort]
    setChannelMaxDuration.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 37
if _libs["PacPci2"].has("setAnalogFilter", "cdecl"):
    setAnalogFilter = _libs["PacPci2"].get("setAnalogFilter", "cdecl")
    setAnalogFilter.argtypes = [c_ushort, c_ushort, c_ushort]
    setAnalogFilter.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 38
if _libs["PacPci2"].has("setSampleRate", "cdecl"):
    setSampleRate = _libs["PacPci2"].get("setSampleRate", "cdecl")
    setSampleRate.argtypes = [c_ushort, c_ushort]
    setSampleRate.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 39
if _libs["PacPci2"].has("setWaveformLength", "cdecl"):
    setWaveformLength = _libs["PacPci2"].get("setWaveformLength", "cdecl")
    setWaveformLength.argtypes = [c_ushort, c_ushort]
    setWaveformLength.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 40
if _libs["PacPci2"].has("setWaveformPreTrigger", "cdecl"):
    setWaveformPreTrigger = _libs["PacPci2"].get("setWaveformPreTrigger", "cdecl")
    setWaveformPreTrigger.argtypes = [c_ushort, c_short]
    setWaveformPreTrigger.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 41
if _libs["PacPci2"].has("setWaveformTransfer", "cdecl"):
    setWaveformTransfer = _libs["PacPci2"].get("setWaveformTransfer", "cdecl")
    setWaveformTransfer.argtypes = [c_ushort]
    setWaveformTransfer.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 42
if _libs["PacPci2"].has("stopWaveformTransfer", "cdecl"):
    stopWaveformTransfer = _libs["PacPci2"].get("stopWaveformTransfer", "cdecl")
    stopWaveformTransfer.argtypes = []
    stopWaveformTransfer.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 43
if _libs["PacPci2"].has("startWaveformTransfer", "cdecl"):
    startWaveformTransfer = _libs["PacPci2"].get("startWaveformTransfer", "cdecl")
    startWaveformTransfer.argtypes = []
    startWaveformTransfer.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 44
if _libs["PacPci2"].has("setHitFeature", "cdecl"):
    setHitFeature = _libs["PacPci2"].get("setHitFeature", "cdecl")
    setHitFeature.argtypes = [c_ushort, c_ushort]
    setHitFeature.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 45
if _libs["PacPci2"].has("setHitParametric", "cdecl"):
    setHitParametric = _libs["PacPci2"].get("setHitParametric", "cdecl")
    setHitParametric.argtypes = [c_ushort, c_ushort]
    setHitParametric.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 46
if _libs["PacPci2"].has("setTimeDrivenFeature", "cdecl"):
    setTimeDrivenFeature = _libs["PacPci2"].get("setTimeDrivenFeature", "cdecl")
    setTimeDrivenFeature.argtypes = [c_ushort, c_ushort]
    setTimeDrivenFeature.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 47
if _libs["PacPci2"].has("setTimeDrivenParametric", "cdecl"):
    setTimeDrivenParametric = _libs["PacPci2"].get("setTimeDrivenParametric", "cdecl")
    setTimeDrivenParametric.argtypes = [c_ushort, c_ushort]
    setTimeDrivenParametric.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 48
if _libs["PacPci2"].has("setHitFftFrequencySpan", "cdecl"):
    setHitFftFrequencySpan = _libs["PacPci2"].get("setHitFftFrequencySpan", "cdecl")
    setHitFftFrequencySpan.argtypes = [c_int, c_int, c_int, POINTER(c_int), POINTER(c_int)]
    setHitFftFrequencySpan.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 49
if _libs["PacPci2"].has("setParametricGain", "cdecl"):
    setParametricGain = _libs["PacPci2"].get("setParametricGain", "cdecl")
    setParametricGain.argtypes = [c_ushort, c_ushort]
    setParametricGain.restype = c_short
